--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Boilerplate for a javascript stack, with typescript compiler",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/server.js",
     "build": "tsc -p .",
+    "start": "node ./dist/server.js",
+    "dev": "nodemon ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
-    "@types/node": "^12.12.7"
+    "@types/node": "^12.12.7",
+    "nodemon": "^1.19.4",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
   }
 }
