--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Typescript web server boilerplate",
   "main": "./dist/server.js",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "tsc",
     "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Typescript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-ts": "tsc -w",
+    "watch-node": "nodemon dist/server.js",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -24,9 +26,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.23",
     "@types/node": "^12.12.7",
+    "@types/supertest": "^2.0.8",
+    "concurrently": "^5.0.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.4",
-    "ts-node": "^8.5.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.7.2"
   }
 }
