--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.7",
     "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/parser": "^2.9.0",
     "concurrently": "^5.0.0",
+    "eslint": "^6.7.1",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2",
