--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
   },
   "homepage": "https://github.com/alexmirrington/js-stack#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.23",
+    "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.7",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
+    "acorn": "^7.1.0",
     "concurrently": "^5.0.0",
     "eslint": "^6.7.1",
     "jest": "^24.9.0",
