--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
 
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
 
     /* Module Resolution Options */
     "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
