--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "concurrently": "^5.0.0",
     "eslint": "^6.7.1",
     "jest": "^24.9.0",
+    "mongodb-memory-server": "^6.0.2",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
