--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
     "baseUrl": ".",                           /* Base directory to resolve non-relative module names. */
 
     /* Strict Type-Checking Options */
-    "strict": true,                           /* Enable all strict type-checking options. */
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "strict": true,                           /* Enable all strict type-checking options: noImplicitAny, strictNullChecks, strictFunctionTypes, strictPropertyInitialization, noImplicitThis, alwaysStrict */
+    "noUnusedLocals": true,                   /* Report errors on unused locals. */
+    "noImplicitReturns": true,                /* Report error when not all code paths in function return a value. */
+    "noFallthroughCasesInSwitch": true,       /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
     "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
