--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Typescript web server boilerplate",
   "main": "./dist/server.js",
+  "private": true,
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/server.js",
@@ -24,13 +25,17 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.23",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.7",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
@@ -40,8 +45,12 @@
     "jest": "^24.9.0",
     "mongodb-memory-server": "^6.0.2",
     "nodemon": "^1.19.4",
+    "source-map-loader": "^0.2.4",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
-    "typescript": "^3.7.2"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.3",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
