--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "jsx": "react",                           /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     "sourceMap": true,                        /* Generates corresponding '.map' file. Provides the information necessary to map back to the source .ts file while debugging.*/
-    "outDir": "./dist",                       /* Redirect output structure to the directory. */
+    "outDir": "./build",                      /* Redirect output structure to the directory. */
     "baseUrl": ".",                           /* Base directory to resolve non-relative module names. */
 
     /* Strict Type-Checking Options */
@@ -23,5 +23,8 @@
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "node_modules/**/*"
   ]
 }
