--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
-    "acorn": "^7.1.0",
+    "acorn": ">=7.1.1",
     "concurrently": "^5.0.0",
     "eslint": "^6.7.1",
     "jest": "^24.9.0",
