Add tsconfig changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,9 @@
     "experimentalDecorators": true            /* Enable experimental support for ES decorators*/
   },
   "include": [
-    "src/**/*",
-    "tests/**/*"
+    "src/**/*"
   ],
   "exclude": [
-    "node_modules/**/*"
+    "**/__tests__"
   ]
 }
