--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
-    "sourceType": "module",
+    "sourceType": "module"
   },
   "extends": [
     "plugin:@typescript-eslint/recommended", // Use the recommended rules from the @typescript-eslint/eslint-plugin
