--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
   "homepage": "https://github.com/alexmirrington/typescript-server#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.7"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/jest": "^27.0.2",
-    "@types/mongoose": "^5.5.32",
     "@types/node": "^16.10.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -43,7 +41,6 @@
     "husky": "^7.0.2",
     "jest": "^27.2.2",
     "lint-staged": "^11.1.2",
-    "mongodb-memory-server": "^7.4.1",
     "nodemon": "^2.0.13",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
